<resources>
    <string name="app_name">WindEWorldPractical</string>
    <string name="e_mail">E mail</string>
    <string name="password">Password</string>
    <string name="password_note">(Password must be 8 character long) </string>
    <string name="sigh_in">Sigh In</string>
    <string name="forgot_password">Forgot password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
</resources>
